# unalome-firewall

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
docs/: agent-parsers-overview.md  architecture.md  parser-claude-code.md  parser-claude-desktop.md  parser-cursor.md  pricing.md
src/: App.tsx  index.css
src-tauri/: .env.signing.example  Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  discovery.rs  lib.rs  main.rs  models.rs  scanner.rs
src-tauri/src/data_shield/: mod.rs
src-tauri/src/firewall/: mod.rs
src-tauri/src/parsers/: claude_code.rs  claude_desktop.rs  cursor.rs  mod.rs  openclaw.rs  pricing.rs
src-tauri/src/pii/: mod.rs
src-tauri/src/reports/: mod.rs
src-tauri/src/safety_net/: mod.rs
src/components/: AgentGrid.tsx  AgentIcons.tsx  AgentPlans.tsx  CircularProgress.tsx  CostTracker.tsx  DashboardHeader.tsx  DataShield.tsx  FirewallRules.tsx  KillSwitch.tsx  OnboardingFlow.tsx  PiiGuardian.tsx  SafetyNet.tsx  SecurityDashboard.tsx  TimelineFeed.tsx  WeeklyReportPage.tsx
src/components/ui/: progress.tsx  select.tsx
src/lib/: utils.ts
src/types/: index.ts
